# discopotty-rs-old

./: Cargo.toml  README.md
.circleci/: config.yml
src/: logger.rs  main.rs  utils.rs
src/commands/: mod.rs  utils.rs  voice.rs
src/commands/music/: playback.rs
src/music/: ytdl.rs
